# python-tailwind-colors

./: .gitignore  LICENSE.md  README.md  example.py  pyproject.toml  setup.py
scripts/: .gitignore  generate.py
tailwind_colors/: __init__.py  colors.py  utils.py
