[tool.poetry]
name = "tailwind_colors"
version = "1.0.1"
description = "Use the default color palette from TailwindCSS (https://tailwindcss.com/docs/customizing-colors) in your python code for plotting, image generation, etc."

authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]
readme = "README.md"
repository = "https://github.com/dostuffthatmatters/python-tailwind-colors"
license = "MIT"

packages = [{include = "tailwind_colors"}]
keywords = [
    "plotting",
    "design",
    "colors",
    "tailwind",
    "css",
    "matplotlib"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
